--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.8.4"
   },
   "devDependencies": {
