--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
+    "echarts": "^5.6.0",
     "naive-ui": "^2.41.0",
     "pinia": "^2.3.1",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.12",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.4.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.8.0-beta.0"
