--- a/backend/nginx/default.conf
+++ b/backend/nginx/default.conf
@@ -22,6 +22,12 @@ server {
         try_files $uri =404;  
     }
 
+    # Serve uploaded project photos
+    location /uploads/projects/ {
+        alias /var/www/project/public/uploads/projects/;
+        try_files $uri =404;
+    }
+
     # Перенаправление всех /api запросов на Symfony
     location /api {
         alias /var/www/project/public;
