--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "echarts": "^5.6.0",
     "naive-ui": "^2.41.0",
     "pinia": "^2.3.1",
